--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     startCommand: "gunicorn portfolio_project.wsgi:application"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.11.0  # More stable version
       - key: SECRET_KEY
         generateValue: true
       - key: DEBUG
