--- a/render.yaml
+++ b/render.yaml
@@ -13,4 +13,8 @@ services:
         value: False
       - key: ALLOWED_HOSTS
         value: "your-app-name.onrender.com"
+      - key: PORT
+        value: 8000
     autoDeploy: true
+    healthCheckPath: /
+    numInstances: 1
