--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
       - key: DEBUG
         value: False
       - key: ALLOWED_HOSTS
-        value: "your-new-app-name.onrender.com"
+        value: "portfolio-abc123.onrender.com"  # Replace with your actual URL
       - key: PORT
         value: 8000
     autoDeploy: true
