--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,7 @@ services:
         value: False
       - key: ALLOWED_HOSTS
         value: "your-app-name.onrender.com"
+        value: "https://portfolio-b39z.onrender.com"
       - key: PORT
         value: 8000
     autoDeploy: true
